--- a/package.json
+++ b/package.json
@@ -29,9 +29,31 @@
   },
   "homepage": "https://github.com/Airfald/auto-cli#readme",
   "dependencies": {
+    "ax-struct-js": "^5.0.0",
     "chalk": "^4.1.0",
     "colors": "^1.4.0",
-    "commander": "^6.0.0"
+    "commander": "^6.0.0",
+    "enquirer": "^2.3.6",
+    "fs-extra": "^9.0.1",
+    "lodash": "^4.17.20",
+    "axios": "^0.19.2",
+    "browser-sync": "^2.26.7",
+    "compare-versions": "^3.6.0",
+    "date-fns": "^2.12.0",
+    "download-git-repo": "^3.0.2",
+    "eslint": "^6.8.0",
+    "glob": "^7.1.6",
+    "http-proxy-middleware": "^1.0.3",
+    "ip": "^1.1.5",
+    "jest": "^25.4.0",
+    "jest-cli": "^25.4.0",
+    "marked": "^1.0.0",
+    "marked-terminal": "^4.0.0",
+    "open": "^7.0.3",
+    "ora": "^4.0.4",
+    "semver": "^7.3.2",
+    "simple-git": "^1.132.0",
+    "stylelint": "^13.3.3"
   },
   "devDependencies": {
     "eslint": "^7.7.0"
